--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Marcelo Avelino</title>
-  </head>
-  <body>
-  </body>
-</html>
+<html>
+
+<head>
+	<title>Jogo da Velha</title>
+<head>
+	<body>
+		<div id="tabuleiro">
+			<p>Jogador da vez:</p>
+	</body>
+</head>
