--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE HTML>
+<html lang="pt-br">
 <head>
-	<title>Jogo da Velha</title>
-<head>
-	<body>
-		<div id="tabuleiro">
-			<p>Jogador da vez:</p>
-	</body>
+		<meta charset="UTF-8">
+		<title>Página Pessoal - Marcelo Avelino</title>
 </head>
+
+	<body>
+		<p>Nenhuma informação disponível.</p>
+	</body>
+</html>
